--- a/debian/rules
+++ b/debian/rules
@@ -48,7 +48,7 @@ clc-source	:= $(clc-base)/source
 clc-systems	:= $(clc-base)/systems
 doc-dir		:= $(prefix)/usr/share/doc/cl-sql
 
-clc-clsql	:= $(clc-source)/$(plain_pkg)-$(UPSTREAM_VER)
+clc-clsql	:= $(clc-source)/$(plain-pkg)-$(UPSTREAM_VER)
 
 lispdir		:= $(prefix)/$(clc-clsql)
 lispdir-sql	:= $(prefix)/$(clc-clsql)/sql
