--- a/debian/rules
+++ b/debian/rules
@@ -152,6 +152,7 @@ binary-arch: build install
 	dh_installdocs
 #	dh_installexamples 
 	dh_installchangelogs ChangeLog
+	dh_link -p $(pkg-base) $(clc-clsql) $(clc-source)/clsql
 	dh_link -p $(pkg-base) $(clc-clsql) $(clc-source)/clsql-base
 	dh_link -p $(pkg-mysql) $(clc-clsql) $(clc-source)/clsql-mysql
 	dh_link -p $(pkg-pg) $(clc-clsql) $(clc-source)/clsql-postgresql
