--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,10 @@
 Source: cl-sql
 Section: devel
-Priority: optional
+Priority: extra
 Maintainer: Kevin Rosenberg <kevin@rosenberg.net>
 Uploaders: Adam Di Carlo <aph@debian.org>
-Build-Depends-Indep: debhelper (>> 3.0.0)
-Standards-Version: 3.5.2
+Build-Depends-Indep: debhelper (>= 4.0.0)
+Standards-Version: 3.5.6
 
 Package: cl-sql
 Architecture: all
