--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: cl-sql
 Section: devel
 Priority: extra
-Maintainer: Kevin Rosenberg <kevin@rosenberg.net>
+Maintainer: Kevin M. Rosenberg <kevin@rosenberg.net>
 Uploaders: Adam Di Carlo <aph@debian.org>
 Build-Depends-Indep: debhelper (>= 4.0.0)
 Standards-Version: 3.5.6
