r2200: Auto commit for Debian build

--- a/debian/rules
+++ b/debian/rules
@@ -54,9 +54,9 @@ lispdir		:= $(prefix)/$(clc-clsql)
 lispdir-sql	:= $(prefix)/$(clc-clsql)/sql
 lispdir-base	:= $(prefix-base)/$(clc-clsql)/base
 lispdir-base-uffi := $(prefix-base)/$(clc-clsql)/interfaces/clsql-uffi
-sodir-base-uffi := $(prefix-base)/usr/lib/cl-sql
+sodir-base-uffi := $(prefix-base)/usr/lib/clsql
 lispdir-mysql	:= $(prefix-mysql)/$(clc-clsql)/interfaces/mysql
-sodir-mysql	:= $(prefix-mysql)/usr/lib/cl-sql
+sodir-mysql	:= $(prefix-mysql)/usr/lib/clsql
 lispdir-pg	:= $(prefix-pg)/$(clc-clsql)/interfaces/postgresql
 lispdir-pg-socket := $(prefix-pg-socket)/$(clc-clsql)/interfaces/postgresql-socket
 lispdir-aodbc	:= $(prefix-aodbc)/$(clc-clsql)/interfaces/aodbc
