--- a/debian/rules
+++ b/debian/rules
@@ -57,8 +57,7 @@ lispdir-base-uffi := $(prefix-base)/$(clc-clsql)/interfaces/clsql-uffi
 sodir-base-uffi := $(prefix-base)/usr/lib/clsql
 lispdir-mysql	:= $(prefix-mysql)/$(clc-clsql)/interfaces/mysql
 sodir-mysql	:= $(prefix-mysql)/usr/lib/clsql
-lispdir-pg	:= $(prefix-pg)/$(clc-clsq
-l)/interfaces/postgresql
+lispdir-pg	:= $(prefix-pg)/$(clc-clsql)/interfaces/postgresql
 lispdir-pg-socket := $(prefix-pg-socket)/$(clc-clsql)/interfaces/postgresql-socket
 lispdir-aodbc	:= $(prefix-aodbc)/$(clc-clsql)/interfaces/aodbc
 
