--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: devel
 Priority: extra
 Maintainer: Kevin M. Rosenberg <kevin@rosenberg.net>
 Uploaders: Adam Di Carlo <aph@debian.org>, Barak A. Pearlmutter <bap@debian.org>
-Build-Depends-Indep: debhelper (>= 4.0.0)
-Standards-Version: 3.5.6
+Build-Depends: debhelper (>= 4.0.0), libmysqlclient10-dev, postgresql-dev
+Standards-Version: 3.5.6.0
 
 Package: cl-sql
 Architecture: all
@@ -23,7 +23,7 @@ Description: SQL Interface for Common Lisp
 
 Package: cl-sql-mysql
 Architecture: any
-Depends: cl-sql-base (>= ${Source-Version}), libmysqlclient10-dev
+Depends: cl-sql-base (>= ${Source-Version}), libmysqlclient10
 Provides: cl-sql-backend
 Description: UncommonSQL database backend, MySQL
  This package enables you to use the CLSQL data access package
@@ -39,7 +39,7 @@ Description: UncommonSQL database backend, AODBC
 
 Package: cl-sql-postgresql
 Architecture: all
-Depends: cl-sql-base (>= ${Source-Version}), postgresql-client, postgresql-dev
+Depends: cl-sql-base (>= ${Source-Version}), postgresql-client
 Provides: cl-sql-backend
 Description: UncommonSQL database backend, PostgreSQL
  This package enables you to use the CLSQL data access package
