r2243: Autocommit for make-debian

--- a/debian/rules
+++ b/debian/rules
@@ -99,7 +99,7 @@ install: build
 	dh_install -p $(pkg-mysql) $(srcs-mysql-so) $(sodir-mysql)
 	dh_install -p $(pkg-pg) $(srcs-pg) $(lispdir-pg)
 	dh_install -p $(pkg-pg-socket) $(srcs-pg-socket) $(lispdir-pg-socket)
-	dh_install -p $(pkg-aodbc) $(srcs-aodbc) $(lispdir-pg-aodbc)
+	dh_install -p $(pkg-aodbc) $(srcs-aodbc) $(lispdir-aodbc)
 
 	# CLC Systems
 	dh_install -p $(pkg) clsql.system $(clc-systems)
