--- a/debian/rules
+++ b/debian/rules
@@ -133,7 +133,7 @@ install: build
 		sed -e "s/%%/$$l/;" debian/prerm.template > debian/$$p.prerm ;\
 		sed -e "s/%%/$$l/;" debian/postinst.template > debian/$$p.postinst ;\
 		chown root.root debian/$$p.prerm debian/$$p.prerm debian/$pp.preinst; \
-		chmod +x debian/$$p.prerm debian/$$p.prerm debian/$pp.preinst; \
+		chmod +x debian/$$p.prerm debian/$$p.prerm debian/$$p.preinst; \
 	done
 
 
