--- a/debian/control
+++ b/debian/control
@@ -15,17 +15,26 @@ Description: SQL Interface for Common Lisp
 
 Package: cl-sql-base
 Architecture: any
-Depends: common-lisp-controller, cl-uffi, cmucl | lisp-compiler
+Depends: common-lisp-controller, cmucl | lisp-compiler
 Recommends: cl-sql-backend
 Description: SQL Interface for Common Lisp
  CLSQL uses the UFFI library to provide SQL to multiple SQL databases
  on multiple Common Lisp implementations.
+ .
+ This package provides the base framework for database backends.
+
+Package: cl-sql-uffi
+Architecture: any
+Depends: common-lisp-controller, cl-uffi, cmucl | lisp-compiler
+Recommends: cl-sql-backend
+Description: Common UFFI functions for CLSQL database backends
+ This package provides an interface to several UFFI functions used by multiple CLSQL database backends.
 
 Package: cl-sql-mysql
 Architecture: any
-Depends: cl-sql-base (>= ${Source-Version}), libmysqlclient10
+Depends: cl-sql-base (>= ${Source-Version}), libmysqlclient10, cl-sql-uffi (>= ${Source-Version})
 Provides: cl-sql-backend
-Description: UncommonSQL database backend, MySQL
+Description: CLSQL database backend, MySQL
  This package enables you to use the CLSQL data access package
  with MySQL databases.
 
@@ -33,15 +42,15 @@ Package: cl-sql-aodbc
 Architecture: all
 Depends: cl-sql-base (>= ${Source-Version}), acl-installer
 Provides: cl-sql-backend
-Description: UncommonSQL database backend, AODBC
+Description: CLSQL database backend, AODBC
  This package enables you to use the CLSQL data access package
  with AllegroCL's AODBC databases.
 
 Package: cl-sql-postgresql
 Architecture: all
-Depends: cl-sql-base (>= ${Source-Version}), postgresql-client
+Depends: cl-sql-base (>= ${Source-Version}), postgresql-client, cl-sql-uffi (>= ${Source-Version})
 Provides: cl-sql-backend
-Description: UncommonSQL database backend, PostgreSQL
+Description: CLSQL database backend, PostgreSQL
  This package enables you to use the CLSQL data access package
  with PostgreSQL databases.
 
@@ -49,6 +58,6 @@ Package: cl-sql-postgresql-socket
 Architecture: all
 Depends: cl-sql-base (>= ${Source-Version})
 Provides: cl-sql-backend
-Description: UncommonSQL database backend, PostgreSQL
+Description: CLSQL database backend, PostgreSQL
  This package enables you to use the CLSQL data access package
  with PostgreSQL databases via a socket interface.
