--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Description: SQL Interface for Common Lisp
 
 Package: cl-sql-uffi
 Architecture: any
-Depends: common-lisp-controller, cl-uffi, cmucl | lisp-compiler
+Depends: common-lisp-controller, cl-uffi, cl-sql-base, cmucl | lisp-compiler
 Recommends: cl-sql-backend
 Description: Common UFFI functions for CLSQL database backends
  This package provides an interface to several UFFI functions used by multiple CLSQL database backends.
