r2277: Autocommit for make-debian

--- a/debian/preinst.template
+++ b/debian/preinst.template
@@ -5,11 +5,12 @@
 # Copyright (c) 2002 Kevin M. Rosenberg
 
 pkg=%%
+dir=/usr/share/common-lisp-source/source/$pkg
 
 case "$1" in
     install|upgrade|abort-upgrade)
-	rm -rf /usr/share/common-lisp-source/${pkg}
-	rm -rf /usr/share/common-lisp-source/${pkg}-[0-9\.]+
+	test -h $dir && rm $dir 
+	rm -rf ${dir}-[0-9\.]+
 
 	;;
     *)
