--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,9 @@
 Source: cl-sql
 Section: devel
 Priority: extra
-Maintainer: Kevin M. Rosenberg <kevin@rosenberg.net>
-Uploaders: Adam Di Carlo <aph@debian.org>, Barak A. Pearlmutter <bap@debian.org>
+Maintainer: Kevin M. Rosenberg <kmr@debian.org>
 Build-Depends: debhelper (>= 4.0.0), libmysqlclient10-dev, postgresql-dev
-Standards-Version: 3.5.6.0
+Standards-Version: 3.5.6.1
 
 Package: cl-sql
 Architecture: all
